[package]
name = "dfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmls

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.25"
#futures = "0.3"

anyhow = "1"
thiserror = "1.0"

async-raft = "0.6"
tarpc = { version = "0.29", features = ["full"] }

serde = "1.0"
toml = "0.5"
tokio-serde = { version = "0.8", features = ["messagepack"] }
#rmp-serde = "1.1"

once_cell = "1.16.0"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }
futures = "0.3.25"


