[package]
name = "dfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmls

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"

anyhow = "1"
thiserror = "1.0"

async-raft = "0.6"
tarpc = { version = "0.29", features = ["full"] }

serde = "1.0"
toml = "0.5"
tokio-serde = { version = "0.8", features = ["bincode"] }
bincode = "1.3.3"

once_cell = "1.16.0"

sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }

webdav-handler = { version = "0.2.0", features = ["hyper"] }
# hyper version will be set by webdav-handler.
hyper = { version = "*", features = ["http1", "http2", "server", "runtime", "tcp", "stream"] }
# bytes version will be set by webdav-handler.
bytes = "*"

uuid = { version = "1.2.2", features = ["v4", "serde"] }

rand = "0.8.5"

camino = { version = "1.1.1", features = ["serde1"] }
chrono = "0.4.23"
